Fix text overflowing when image behind (#110)

--- a/src/components/common/_image-position.scss
+++ b/src/components/common/_image-position.scss
@@ -40,8 +40,11 @@
     & > #{$imgParent} {
       flex-direction: column;
 
-      & > span {
+      & > img {
         position: absolute;
+      }
+      & > span {
+        z-index: 1;
       }
     }
   }
